--- a/src/index.hbs
+++ b/src/index.hbs
@@ -1,3 +1,4 @@
+{{!-- SECTION SMART START --}}
 <section class="smart">
   <div class="smart__wrapper">
     
@@ -49,3 +50,16 @@
   
   </div>  
 </section>
+{{!-- SECTION SMART END --}}
+
+{{!-- ----------------- --}}
+
+{{!-- SECTION CCP START --}}
+<section class="ccp">
+  <div class="ccp__wrapper">
+    <div class="ccp__hdrtext">
+      <h2>Cryptocurrency Price Capitalizations</h2>
+    </div>
+  </div>
+</section>
+{{!-- SECTION CCP END --}}
