--- a/src/index.hbs
+++ b/src/index.hbs
@@ -29,10 +29,11 @@
     </div>
 
     <div class="smart__watch">
-      <span>WHY CHOOSE BITMIN?</span>
-      {{!-- <img src="/pict/btnplay.png" alt="watch button"> --}}
+      <span>WHY CHOOSE BITMIN?</span>      
       <button></button>
-      <span>WATCH NOW !!!</span>
+      <div class="smart__wnow">
+        <span>WATCH NOW !!!</span>
+      </div>      
     </div>
 
     <div class="smart__phone">
