--- a/src/index.hbs
+++ b/src/index.hbs
@@ -61,6 +61,26 @@
     <div class="ccp__hdrtext">
       <h2>Cryptocurrency Price Capitalizations</h2>
     </div>
+    <div class="ccp__textdescr">
+      <span>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus, ac facilisis in, egestas eget quam praesent commodo cursus magna.</span>
+    </div>
+    <div class="ccp__cardsblock">
+      <div class="ccp__cardsbitcoin">
+        <div class="ccp__cardsbitcoinlogo">
+          <img src="/pict/csharp.png" alt="bitcoin">
+        </div>
+        <div class="ccp__cardsbitcoininfo">
+          <div class="ccp__cardsbitcoinprice">
+            <span>Bitcoin</span>
+            <span>$ 11,354.00</span>
+          </div>
+        </div>
+
+      </div>
+      <div class="ccp__cardsethereum"></div>
+      <div class="ccp__cardsripple"></div>
+      <div class="ccp__cardscardano"></div>
+    </div>
   </div>
 </section>
 {{!-- SECTION CCP END --}}
