--- a/src/less/var.less
+++ b/src/less/var.less
@@ -1,2 +1,5 @@
 @border: 1px solid red;
+@colorlightgray: #9a9697;
+@colordarkblue: #292a3c;
+@colorverydarkblue: #272637;
 @transition: ease-in-out 0.5s;
