--- a/src/less/style.less
+++ b/src/less/style.less
@@ -5,6 +5,16 @@
 .reset();
 
 
+// MIXINS BLOCK START
+.mixincards {
+  border: @border;
+  border-radius: 5px;
+  height: 350px;
+  width: 270px;
+  margin: 50px 14px 60px 14px;
+}
+// MIXINS BLOCK END
+
 // SECTION SMART START
 .smart {        
   //border: @border;
@@ -507,13 +517,78 @@
 
 // SECTION CCP START
 .ccp {  
-  display: flex;
+  //display: flex;
   &__wrapper {     
     border: @border;
+    display: flex;
+    flex-direction: column;    
+    font-family: 'Sulphur Point', sans-serif;    
   }
   &__hdrtext {
-    font-size: 3rem;
-    color: black;
+    align-self: center;
+    font-size: 2.5rem;
+    margin-top: 320px;
+    color: @colorverydarkblue;    
+    h2 {
+      font-weight: bolder;
+    }
+  }
+  &__textdescr {
+    border: @border;
+    width: 40%;
+    align-self: center;
+    text-align: center;
+    font-size: 1.2rem;
+    margin-top: 20px;    
+    color: @colorlightgray;
+  }
+  &__cardsblock {
+    border: @border;    
+    display: flex;
+    justify-content: center;
+  }
+  &__cardsbitcoin {
+    .mixincards();
+    display: flex;
+    flex-direction: column;    
+  }
+  &__cardsbitcoinlogo {
+    border: @border;
+    display: flex;
+    flex-direction: column-reverse;    
+    align-items: center;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    height: 20%;
+    background-color: @colordarkblue;
+    img {
+      position: relative;
+      top: 30px;
+      height: 70px;
+      width: 70px;
+    }
+  }
+  &__cardsbitcoininfo {
+    border: @border;
+    display: flex;    
+    height: 70%;
+    background-color: @colorverydarkblue;        
+  }
+  &__cardsbitcoinprice {
+    border: @border;
+    height: 20px;
+    width: 100%;
+  }
+
+
+  &__cardsethereum {
+    .mixincards();
+  }
+  &__cardsripple {
+    .mixincards();
+  }
+  &__cardscardano {
+    .mixincards();
   }
 }
 // SECTION CCP END
