--- a/src/index.hbs
+++ b/src/index.hbs
@@ -58,21 +58,41 @@
 {{!-- SECTION CCP START --}}
 <section class="ccp">
   <div class="ccp__wrapper">
+    
     <div class="ccp__hdrtext">
       <h2>Cryptocurrency Price Capitalizations</h2>
-    </div>
+    </div>    
     <div class="ccp__textdescr">
       <span>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus, ac facilisis in, egestas eget quam praesent commodo cursus magna.</span>
-    </div>
+    </div>    
     <div class="ccp__cardsblock">
       <div class="ccp__cardsbitcoin">
         <div class="ccp__cardsbitcoinlogo">
-          <img src="/pict/csharp.png" alt="bitcoin">
+          <img src="/pict/bitcoinlogo.png" alt="bitcoin">
         </div>
         <div class="ccp__cardsbitcoininfo">
           <div class="ccp__cardsbitcoinprice">
             <span>Bitcoin</span>
-            <span>$ 11,354.00</span>
+            <span><sub>$</sub> 11,354.00</span>
+          </div>
+          <div class="ccp__cardsbitcoingain">
+            <span>BTC/USD</span>
+            <span>-1.04%</span>
+          </div>
+          <div class="ccp__cardsbitcoingrapf">
+
+          </div>
+          <div class="ccp__cardsbitcointimestapm">
+            <button>Hour</button>
+            <button>Day</button>
+            <button>Week</button>
+            <button>Month</button>            
+          </div>
+        </div>
+        <div class="ccp__cardsbitcoinfooter">
+          <div class="ccp__cardsbitcoinvolume">
+            <span>24h Volume</span>
+            <span>$ 7.02B</span>
           </div>
         </div>
 
