--- a/src/less/var.less
+++ b/src/less/var.less
@@ -1,5 +1,7 @@
 @border: 1px solid red;
+@colorred: #b92c34;
 @colorlightgray: #9a9697;
 @colordarkblue: #292a3c;
 @colorverydarkblue: #272637;
+@colorbluegray: #3a3a52;
 @transition: ease-in-out 0.5s;
