--- a/src/index.hbs
+++ b/src/index.hbs
@@ -65,7 +65,9 @@
     <div class="ccp__textdescr">
       <span>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus, ac facilisis in, egestas eget quam praesent commodo cursus magna.</span>
     </div>    
+    
     <div class="ccp__cardsblock">
+      
       <div class="ccp__cardsbitcoin">
         <div class="ccp__cardsbitcoinlogo">
           <img src="/pict/bitcoinlogo.png" alt="bitcoin">
@@ -95,9 +97,37 @@
             <span>$ 7.02B</span>
           </div>
         </div>
-
       </div>
-      <div class="ccp__cardsethereum"></div>
+
+
+      <div class="ccp__cardsethereum">
+        <div class="ccp__cardsethereumlogo">
+          <img src="/pict/etheriumlogo.png" alt="ethereum">
+        </div>
+        <div class="ccp__cardsethereuminfo">
+
+          <div class="ccp__cardsethereumprice">
+            <span>Bitcoin</span>
+            <span><sub>$</sub> 11,354.00</span>
+          </div>
+          <div class="ccp__cardsethereumgain">
+            <span>BTC/USD</span>
+            <span>-1.04%</span>
+          </div>
+          <div class="ccp__cardsethereumgrapf">
+
+          </div>
+          <div class="ccp__cardsethereumtimestapm">
+            <button>Hour</button>
+            <button>Day</button>
+            <button>Week</button>
+            <button>Month</button>            
+          </div>
+
+        </div>
+      </div>
+
+
       <div class="ccp__cardsripple"></div>
       <div class="ccp__cardscardano"></div>
     </div>
